src/objects/Invoice_Item__c.object
<CustomObject>
    <description>Records for invoice items that will be synced with Quickbooks</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>41</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRR_Supervisor__c</fullName>
        <label>CRR Supervisor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Report__c</fullName>
        <description>Parent Case</description>
        <label>Case Report</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Invoice Class related to Case Report</description>
        <label>Class</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_ServiceItem_check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Trigger</description>
        <label>QB ServiceItem check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <description>Service Rate for Service item</description>
        <label>Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <description>Rep Name for Quickbooks</description>
        <label>Rep</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <description>ISYS Report Name from Case Report</description>
        <label>Report Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Date__c</fullName>
        <description>Refers &apos;Service Date Thru&apos; under Case Report</description>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <description>Name of Service: e.g. MCM-Onsite, Travel/Wait</description>
        <label>Service Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Units__c</fullName>
        <description>Total Hours/Units per Service item from B Professional Units or B Non-Professional.</description>
        <label>Time/Units</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Invoice Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Invoice Line-{00000}</displayFormat>
        <label>Invoice Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>